test/ui/name-resolution/wildcards-unsupported.lushui
meaning: ?Hole = ?hole

careless: _ = _

main: Unit = case scrutinee of
    Container _ ?unknown => scrutinee
